; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_lex.c_chrnamed.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_lex.c_chrnamed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vars = type { i32 }
%struct.cvec = type { i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vars*, i32*, i32*, i32)* @chrnamed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @chrnamed(%struct.vars* %0, i32* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.vars*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.cvec*, align 8
  store %struct.vars* %0, %struct.vars** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %14 = load %struct.vars*, %struct.vars** %6, align 8
  %15 = getelementptr inbounds %struct.vars, %struct.vars* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  store i32 %16, i32* %11, align 4
  %17 = load %struct.vars*, %struct.vars** %6, align 8
  %18 = getelementptr inbounds %struct.vars, %struct.vars* %17, i32 0, i32 0
  store i32 0, i32* %18, align 4
  %19 = load %struct.vars*, %struct.vars** %6, align 8
  %20 = load i32*, i32** %7, align 8
  %21 = load i32*, i32** %8, align 8
  %22 = call i32 @element(%struct.vars* %19, i32* %20, i32* %21)
  store i32 %22, i32* %10, align 4
  %23 = load %struct.vars*, %struct.vars** %6, align 8
  %24 = getelementptr inbounds %struct.vars, %struct.vars* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  store i32 %25, i32* %12, align 4
  %26 = load i32, i32* %11, align 4
  %27 = load %struct.vars*, %struct.vars** %6, align 8
  %28 = getelementptr inbounds %struct.vars, %struct.vars* %27, i32 0, i32 0
  store i32 %26, i32* %28, align 4
  %29 = load i32, i32* %12, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %4
  %32 = load i32, i32* %9, align 4
  store i32 %32, i32* %5, align 4
  br label %50

33:                                               ; preds = %4
  %34 = load %struct.vars*, %struct.vars** %6, align 8
  %35 = load i32, i32* %10, align 4
  %36 = load i32, i32* %10, align 4
  %37 = call %struct.cvec* @range(%struct.vars* %34, i32 %35, i32 %36, i32 0)
  store %struct.cvec* %37, %struct.cvec** %13, align 8
  %38 = load %struct.cvec*, %struct.cvec** %13, align 8
  %39 = getelementptr inbounds %struct.cvec, %struct.cvec* %38, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = icmp eq i64 %40, 0
  br i1 %41, label %42, label %44

42:                                               ; preds = %33
  %43 = load i32, i32* %9, align 4
  store i32 %43, i32* %5, align 4
  br label %50

44:                                               ; preds = %33
  %45 = load %struct.cvec*, %struct.cvec** %13, align 8
  %46 = getelementptr inbounds %struct.cvec, %struct.cvec* %45, i32 0, i32 1
  %47 = load i32*, i32** %46, align 8
  %48 = getelementptr inbounds i32, i32* %47, i64 0
  %49 = load i32, i32* %48, align 4
  store i32 %49, i32* %5, align 4
  br label %50

50:                                               ; preds = %44, %42, %31
  %51 = load i32, i32* %5, align 4
  ret i32 %51
}

declare dso_local i32 @element(%struct.vars*, i32*, i32*) #1

declare dso_local %struct.cvec* @range(%struct.vars*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
